[package]
name = "tasha"
version = "0.1.0"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "Distributed in-memory cache service"
edition = "2021"
categories = [
  "concurrency",
  "network-programming",
]
keywords = [
  "cache",
  "distributed",
  "memory",
  "redis",
]
repository = "https://github.com/xushaohua/tasha"
homepage = "https://github.com/xushaohua/tasha"
license = "AGPL-3.0-or-later"
readme = "./README.md"
rust-version = "1.78.0"
publish = false

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
stdext = "0.3.3"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
