[package]
name = "radonkv"
version = "0.1.1"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "Distributed in-memory cache service"
edition = "2021"
categories = [
    "concurrency",
    "network-programming",
]
keywords = [
    "cache",
    "distributed",
    "memory",
    "redis",
]
repository = "https://github.com/xushaohua/radonkv"
homepage = "https://github.com/xushaohua/radonkv"
license = "AGPL-3.0-or-later"
readme = "./README.md"
rust-version = "1.78.0"

[dependencies]
atoi = "2.0.0"
bit-vec = "0.6.3"
bloomfilter = "1.0.13"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
hyperloglogplus = "0.4.1"
log = "0.4.21"
log4rs = { version = "1.3.0", features = ["all_components", "background_rotation", "gzip"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
stdext = "0.3.3"
thiserror = "1.0.61"
tikv-jemallocator = { version = "0.5.4", features = ["background_threads"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"

[target.'cfg(unix)'.dependencies]
nc = "0.8.21"

[profile.dev]
codegen-units = 1

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = "full"
