[package]
name = "radonkv"
version = "0.1.1"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "Distributed in-memory cache service"
edition = "2021"
categories = [
    "concurrency",
    "network-programming",
]
keywords = [
    "cache",
    "distributed",
    "memory",
    "redis",
]
repository = "https://github.com/xushaohua/radonkv"
homepage = "https://github.com/xushaohua/radonkv"
license = "AGPL-3.0-or-later"
readme = "./README.md"
rust-version = "1.78.0"

[features]
default = []
jemalloc = ["tikv-jemallocator"]

[dependencies]
atoi = "2.0.0"
bit-vec = "0.8.0"
bloomfilter = "1.0.14"
bytes = "1.7.1"
clap = { version = "4.5.14", features = ["derive"] }
hyperloglogplus = "0.4.1"
log = "0.4.22"
log4rs = { version = "1.3.0", features = ["all_components", "background_rotation", "gzip"] }
rand = "0.8.5"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
stdext = "0.3.3"
thiserror = "1.0.63"
tikv-jemallocator = { version = "0.6.0", features = ["background_threads"], optional = true }
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"

[target.'cfg(unix)'.dependencies]
nc = "0.9.1"

[profile.dev]
codegen-units = 1

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = "full"
